--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Elegant Perfume</title>
+	<title>Elegant Perfumes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -39,37 +39,37 @@
 
         <div class="item">
             <img src="img/madlove.jpg" alt="madlove">
-            <p>Inspired by Katy Perry</p>
+            <p>Katy Perry</p>
             <P>$109.99</P>
         </div>
 
         <div class="item">
             <img src="img/scandal.jpeg" alt="scandal">
-            <p>Inspired by Jean Paul</p>
+            <p>Jean Paul Gaultier</p>
             <P>$109.99</P>
         </div> 
 
         <div class="item">
             <img src="img/coco chanel.jpg" alt="coco">
-            <p>Inspired by Katy Perry</p>
+            <p>Coco Chanel N.1</p>
             <P>$109.99</P>
         </div> 
 
         <div class="item">
             <img src="img/armani-si.jpg" alt="armani">
-            <p>Inspired by Katy Perry</p>
+            <p>Armani Si</p>
             <P>$109.99</P>
         </div> 
 
         <div class="item">
             <img src="img/olympia women.jpg" alt="olympia">
-            <p>Inspired by Katy Perry</p>
+            <p>Paco Rabanne Olympea</p>
             <P>$109.99</P>
         </div> 
 
         <div class="item">
             <img src="img/black-orchid.jpg" alt="orchid">
-            <p>Inspired by Katy Perry</p>
+            <p>Tom Ford Black Orchid</p>
             <P>$109.99</P>
         </div> 
     </div>
@@ -79,37 +79,37 @@
         <br>
         <div class="item">
             <img src="img/versace.jpg" alt="versace">
-            <p>Inspired by Eros</p>
+            <p>Versace Eros</p>
             <p>$200.99</p>
         </div>
 
         <div class="item">
             <img src="img/diesel.jpeg" alt="versace">
-            <p>Inspired by Eros</p>
+            <p>Diesel only the brave</p>
             <p>$200.99</p>
         </div>
 
         <div class="item">
             <img src="img/Invictus.jpg" alt="versace">
-            <p>Inspired by Eros</p>
+            <p>Paco Rabanne Invictus</p>
             <p>$200.99</p>
         </div>
 
         <div class="item">
             <img src="img/sauvage.jpeg" alt="versace">
-            <p>Inspired by Eros</p>
+            <p>Christian Dior Sauvage</p>
             <p>$200.99</p>
         </div>
 
         <div class="item">
             <img src="img/creed.jpg" alt="versace">
-            <p>Inspired by Eros</p>
+            <p>Aventus Creed</p>
             <p>$200.99</p>
         </div>
 
         <div class="item">
             <img src="img/olympia men.jpg" alt="versace">
-            <p>Inspired by Eros</p>
+            <p>Scene of the Gods Olympea</p>
             <p>$200.99</p>
         </div>
 
