--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <section class="background-section">
     <h2>Welcome to Our Shop</h2>
-    <p>Discover amazing perfume for both men and women of elegance</p>
+    <p>Discover amazing perfume for Elegant Men and Women</p>
     <a href="women.html" class="cta-button women-button">Women's section</a>
     <a href="men.html" class="cta-button men-button">Men's section</a>
 </section>
