--- a/About.html
+++ b/About.html
@@ -21,10 +21,9 @@
 	        </ul>
            <!---- <div class="'icon">&#9776;</div> hamburger icon
         </nav>
-        <script src="script.js"></script> -->
+        <script src="script.js"></script>
 
     </header>
-
     <main>
         <section>
             <h1>About Us</h1>
