--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Elegant Perfumes</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="script.js/script.js" defer></script>
 </head>
 <body>
 
@@ -15,14 +16,13 @@
         </div>
 
         <nav>
-	        <ol>
-	            <li><a href="#home">Home</a></li>
-	            <li><a href="#about">About</a></li>
-	            <li><a href="#contact">Contact</a></li>
-	        </ol>
-           <!---- <div class="'icon">&#9776;</div> hamburger icon
+	        <ul>
+	            <li><a href="/">Home</a></li>
+	            <li><a href="/about">About Us</a></li>
+	            <li><a href="#" onclick="openForm(contactForm)">Contact</a></li>
+	        </ul>
+           <div class="'icon">&#9776;</div>
         </nav>
-        <script src="script.js"></script> -->
 
     </header>
 
