--- a/About.html
+++ b/About.html
@@ -17,20 +17,56 @@
 
         <nav>
 	        <ul>
-	            <li><a href="/">Home</a></li>
-	            <li><a href="/about">About Us</a></li>
-	            <li><a href="#" onclick="openForm(contactForm)">Contact</a></li>
+	            <li><a href="index.html">Home</a></li>
+	            <li><a href="about.html">About Us</a></li>
+	            <li><a href="contact.html">Contact Us</a></li>
 	        </ul>
-            <div class="'icon">&#9776;</div>
         </nav>
         
 
     </header>
     <main>
+
         <section class="background-section">
-            <h1>About Us</h1>
-            <p>Welcome to Elegant Perfumes</p>
-        </section>
+            <img class="image" src="img/olympia men.jpg" alt="background"><br>
+            <br>
+            <br>
+            <div class="text">
+                <h1>About Us</h1>
+                <p>Everything you need to know about Elegant Perfume.</p>
+            </div> 
+            <button id="scrollParagraph">Read More</button>
+            
+            <section id="ParagraphSection">
+                <p id="targetParagraph">
+                    About Us<br>
+Welcome to Elegent Perfume, where luxury and fragrance meet to create an<br> unparalleled olfactory experience. We take pride in curating an exquisite collection of <br> perfumes from around the world, bringing you the finest scents that evoke emotions,<br> memories, and sophistication.<br>
+<br>
+<br>
+Our Passion<br>
+At Elegant Perfume, we are driven by a passion for fragrance. We believe that <br> a well-chosen scent is a personal expression of style and identity. Our mission is to offer<br> you a carefully selected range of perfumes that cater to diverse tastes and preferences.<br> Whether you seek a signature scent for daily wear or a unique fragrance<br> for special occasions, we have something for everyone.<br>
+<br>
+<br>
+Unrivaled Selection<br>
+Explore our extensive selection of perfumes, featuring iconic brands and niche<br> artisans. Each fragrance is a masterpiece, crafted with precision and attention to detail<br>. From timeless classics to the latest trends, our collection is a celebration of <br>diversity and individuality.<br>
+<br>
+<br>
+Quality Assurance<br>
+We prioritize quality and authenticity in every perfume we offer. All our products are<br>sourced directly from reputable manufacturers and distributors. Every bottle <br>undergoes thorough quality checks to ensure that you receive only genuine, high-quality<br> perfumes that stand the test of time.<br>
+<br>
+<br>
+Customer-Centric Approach<br>
+Our commitment to customer satisfaction is unwavering. We strive to create<br> a seamless shopping experience, providing you with detailed product information,<br> expert recommendations, and exceptional customer service. Your trust is our greatest asset,<br> and we go the extra mile to exceed your expectations.<br>
+<br>
+<br>
+Stay Connected<br>
+Join our fragrance community and stay connected with the latest perfume trends,<br> exclusive offers, and behind-the-scenes insights. Follow us on social media, subscribe<br> to our newsletter, and become part of the Elegant Perfume family.<br>
+<br>
+Thank you for choosing Elegant Perfume. Embrace the world of scents,<br> and let every fragrance tell your unique story.<br>
+                </p>
+
+            </section>
+
     </main>
 
     <footer>
