--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Elegant Perfumes</title>
+	<title>Elegant Perfume</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js/script.js" defer></script>
 </head>
@@ -17,11 +17,10 @@
 
         <nav>
 	        <ul>
-	            <li><a href="/">Home</a></li>
-	            <li><a href="/about">About Us</a></li>
-	            <li><a href="#" onclick="openForm(contactForm)">Contact</a></li>
+	            <li><a href="index.html">Home</a></li>
+	            <li><a href="about.html">About US</a></li>
+	            <li><a href="contact.html">Contact Us</a></li>
 	        </ul>
-           <div class="'icon">&#9776;</div>
         </nav>
 
     </header>
@@ -34,7 +33,10 @@
 </section>
 
 <section class="items-section">
-    <div class="Category">
+    <div class="Category"><br>
+        <br>
+        <br>
+        <br>
         <h3>Welcome! Ladies</h3>
 
         <div class="item">
