--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <img class="image" src="img/background2.png" alt="background"> 
             <div class="text"> 
                 <p></p>
-                <a href="ContactForm" class="nav-button">Get In Touch</a>
+                <a href="ContactForm" class="nav-button">Get In Touch With Us</a>
             </div>
         </section>
 
