--- a/About.html
+++ b/About.html
@@ -28,41 +28,32 @@
     <main>
 
         <section class="background-section">
-            <img class="image" src="img/olympia men.jpg" alt="background"><br>
+            <img class="image" src="img/background.jpg" alt="background"><br>
             <br>
             <br>
-            <div class="text">
-                <h1>About Us</h1>
-                <p>Everything you need to know about Elegant Perfume.</p>
-            </div> 
-            <button id="scrollParagraph">Read More</button>
+    
+            <button id="scrollParagraph">More About Us</button>
             
             <section id="ParagraphSection">
                 <p id="targetParagraph">
-                    About Us<br>
-Welcome to Elegent Perfume, where luxury and fragrance meet to create an<br> unparalleled olfactory experience. We take pride in curating an exquisite collection of <br> perfumes from around the world, bringing you the finest scents that evoke emotions,<br> memories, and sophistication.<br>
-<br>
-<br>
-Our Passion<br>
-At Elegant Perfume, we are driven by a passion for fragrance. We believe that <br> a well-chosen scent is a personal expression of style and identity. Our mission is to offer<br> you a carefully selected range of perfumes that cater to diverse tastes and preferences.<br> Whether you seek a signature scent for daily wear or a unique fragrance<br> for special occasions, we have something for everyone.<br>
-<br>
-<br>
-Unrivaled Selection<br>
-Explore our extensive selection of perfumes, featuring iconic brands and niche<br> artisans. Each fragrance is a masterpiece, crafted with precision and attention to detail<br>. From timeless classics to the latest trends, our collection is a celebration of <br>diversity and individuality.<br>
-<br>
-<br>
-Quality Assurance<br>
-We prioritize quality and authenticity in every perfume we offer. All our products are<br>sourced directly from reputable manufacturers and distributors. Every bottle <br>undergoes thorough quality checks to ensure that you receive only genuine, high-quality<br> perfumes that stand the test of time.<br>
-<br>
-<br>
-Customer-Centric Approach<br>
-Our commitment to customer satisfaction is unwavering. We strive to create<br> a seamless shopping experience, providing you with detailed product information,<br> expert recommendations, and exceptional customer service. Your trust is our greatest asset,<br> and we go the extra mile to exceed your expectations.<br>
-<br>
-<br>
-Stay Connected<br>
-Join our fragrance community and stay connected with the latest perfume trends,<br> exclusive offers, and behind-the-scenes insights. Follow us on social media, subscribe<br> to our newsletter, and become part of the Elegant Perfume family.<br>
-<br>
-Thank you for choosing Elegant Perfume. Embrace the world of scents,<br> and let every fragrance tell your unique story.<br>
+                    <h2>About Us</h2>
+<p>Welcome to Elegent Perfume, where luxury and fragrance meet to create an unparalleled olfactory experience. We take pride in curating an exquisite collection of perfumes from around the world, bringing you the finest scents that evoke emotions, memories, and sophistication.</p>
+
+<h2>Our Passion</h2>
+<p>At Elegant Perfume, we are driven by a passion for fragrance. We believe that a well-chosen scent is a personal expression of style and identity. Our mission is to offer you a carefully selected range of perfumes that cater to diverse tastes and preferences. Whether you seek a signature scent for daily wear or a unique fragrance for special occasions, we have something for everyone.</p>
+
+<h2>Unrivaled Selection</h2>
+<p>Explore our extensive selection of perfumes, featuring iconic brands and niche artisans. Each fragrance is a masterpiece, crafted with precision and attention to detail. From timeless classics to the latest trends, our collection is a celebration of diversity and individuality.</p>
+
+<h2>Quality Assurance</h2>
+<p>We prioritize quality and authenticity in every perfume we offer. All our products are sourced directly from reputable manufacturers and distributors. Every bottle undergoes thorough quality checks to ensure that you receive only genuine, high-quality perfumes that stand the test of time.</p>
+
+<h2>Customer-Centric Approach </h2>
+<p>Our commitment to customer satisfaction is unwavering. We strive to create a seamless shopping experience, providing you with detailed product information, expert recommendations, and exceptional customer service. Your trust is our greatest asset, and we go the extra mile to exceed your expectations.</p>
+
+<h2>Stay Connected</h2>
+<p>Join our fragrance community and stay connected with the latest perfume trends, exclusive offers, and behind-the-scenes insights. Follow us on social media, subscribe to our newsletter, and become part of the Elegant Perfume family.</p>
+<p>Thank you for choosing Elegant Perfume. Embrace the world of scents, and let every fragrance tell your unique story.</p>
                 </p>
 
             </section>
