--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Elegant Perfume</title>
+    <link href="https://cdn.jsdeliver.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js/script.js" defer></script>
 </head>
@@ -39,40 +40,43 @@
         <br>
         <h3>Welcome! Ladies</h3>
 
-        <div class="item">
-            <img src="img/madlove.jpg" alt="madlove">
-            <p>Katy Perry</p>
-            <P>$109.99</P>
-        </div>
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-md-8 mb-4">
+                    <img src="img/madlove.jpg" alt="madlove" class="img-fluid">
+                    <p class="image-description">Katy Perry </p>
+                    <P class="image-price">$109.99</P>
+                </div>
+            </div>
 
-        <div class="item">
-            <img src="img/scandal.jpeg" alt="scandal">
-            <p>Jean Paul Gaultier</p>
-            <P>$109.99</P>
+            <div class="col-md-4 mb-4">
+                <img src="img/scandal.jpeg" alt="scandal" class="img-fluid">
+                <p class="image-description">Paul Gaultier </p>
+                <P class="image-price">$109.99</P>
+            </div> 
+
+            <div class="col-md-4">
+                <img src="img/coco chanel.jpg" alt="coco" class="img-fluid">
+                <p class="image-description">Chanel N.1 </p>
+                <P class="image-price">$109.99</P>
+            </div> 
+
+            <div class="col-md-4">
+                <img src="img/armani-si.jpg" alt="armani" class="img-fluid">
+                <p class="image-description">Armani Si </p>
+                <P class="image-price">$109.99</P>
+            </div> 
+
+        <div class="col-md-4">
+            <img src="img/olympia women.jpg" alt="olympia" class="img-fluid">
+            <p class="image-description">Rabanne Olympea </p>
+            <P class="image-price">$109.99</P>
         </div> 
 
-        <div class="item">
-            <img src="img/coco chanel.jpg" alt="coco">
-            <p>Coco Chanel N.1</p>
-            <P>$109.99</P>
-        </div> 
-
-        <div class="item">
-            <img src="img/armani-si.jpg" alt="armani">
-            <p>Armani Si</p>
-            <P>$109.99</P>
-        </div> 
-
-        <div class="item">
-            <img src="img/olympia women.jpg" alt="olympia">
-            <p>Paco Rabanne Olympea</p>
-            <P>$109.99</P>
-        </div> 
-
-        <div class="item">
-            <img src="img/black-orchid.jpg" alt="orchid">
-            <p>Tom Ford Black Orchid</p>
-            <P>$109.99</P>
+        <div class="col-md-4">
+            <img src="img/black-orchid.jpg" alt="orchid" class="img-fluid">
+            <p class="image-description">Ford Black Orchid </p>
+            <P class="image-price">$109.99</P>
         </div> 
     </div>
 
@@ -116,6 +120,7 @@
         </div>
 
     </div>
+    <script src="https://cdn.jsdeliver.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
 
 
