--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
 	        <ul>
 	            <li><a href="index.html">Home</a></li>
-	            <li><a href="about.html">About US</a></li>
+	            <li><a href="about.html">About Us</a></li>
 	            <li><a href="contact.html">Contact Us</a></li>
 	        </ul>
         </nav>
@@ -164,7 +164,7 @@
 </script>
 
 <section id="customer-reviews">
-    <h2>Customer Reviews</h2>
+    <h3>Customer Reviews</h3>
     <div id="reviews-container">
         
     </div>
